# brain-ai-memory

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  PYPI_README.md  README.ko.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: field-report.yml
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  component_ablation_cases.jsonl  manifest.template.json  plot_component_ablation.py  plot_retrieval_tradeoff.py  run_component_ablation.py  run_longmemeval_pilot.py  run_runtime_contract.py  runtime_contract_cases.jsonl  validate_manifest.py
benchmarks/pilots/component-ablation-20260715/: README.md  manifest.json  records.jsonl  summary.json
benchmarks/pilots/longmemeval-s-retrieval-20260714/: DATASET_NOTICE.md  README.md  summary.json
benchmarks/pilots/longmemeval-s-retrieval-20260714/flat_bm25/: events.jsonl  manifest.json  prompt.txt  retrieval.jsonl
benchmarks/pilots/longmemeval-s-retrieval-20260714/pointer_bm25_t12/: events.jsonl  manifest.json  retrieval.jsonl
benchmarks/pilots/longmemeval-s-retrieval-20260714/pointer_bm25_t24/: events.jsonl  manifest.json  predictions.jsonl  retrieval.jsonl
benchmarks/pilots/longmemeval-s-retrieval-20260714/pointer_bm25_t48/: events.jsonl  manifest.json  retrieval.jsonl
benchmarks/pilots/longmemeval-s-retrieval-20260714/pointer_bm25_t96/: events.jsonl  manifest.json  retrieval.jsonl
benchmarks/pilots/longmemeval-s-retrieval-20260714/recency/: events.jsonl  manifest.json  retrieval.jsonl
benchmarks/pilots/runtime-contract-20260715/: README.md
docs/: 01-the-mapping.md  02-memory-lifecycle.ko.md  02-memory-lifecycle.md  03-governance-tiers.md  04-principles.md  05-runtime.ko.md  05-runtime.md  06-adapters-and-observer.ko.md  06-adapters-and-observer.md  07-mcp-server.ko.md  07-mcp-server.md  08-autonomous-loop.ko.md  08-autonomous-loop.md
evidence/: README.md  lifecycle_under_budget.py  operational-evidence.md  operational-snapshot-2026-07-14.json
examples/: 01_guard_in_action.py  02_lifecycle_decision.py  README.md
schema/: brain_components.yaml
src/brain_ai_memory/: __init__.py  adapters.py  cli.py  config.py  context.py  control.py  hook_cli.py  integrations.py  loop.py  mcp_server.py  migrations.py  ontology.py  privacy.py  runtime.py  storage.py  text.py  workspace.py
templates/: README.md
templates/hooks/: behavioral-guard.py  self-check-trigger.py
templates/memory/: 7-op-decision.md  MEMORY.skeleton.md
templates/memory/topics/: example-topic.md  some-decision.md
templates/rules/: rule-stub.md
tests/: test_component_ablation.py  test_e2e.py  test_integrations.py  test_loop.py  test_runtime.py  test_storage_concurrency.py  test_workspace.py
