[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "brain-ai-memory"
version = "0.6.0"
description = "Local project memory for Codex and Claude Code across sessions"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Hahyun Lee"}]
keywords = [
  "ai-agents",
  "agent-memory",
  "memory-management",
  "long-term-memory",
  "episodic-memory",
  "semantic-memory",
  "mcp",
  "codex",
  "claude-code",
  "rag",
  "llm",
  "agent-runtime",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "PyYAML>=6.0,<7",
  "tomli>=2.0,<3; python_version < '3.11'",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2.0,<2"]
plot = ["matplotlib==3.10.8"]

[project.urls]
Homepage = "https://github.com/Hahyun-Lee/brain-ai-memory"
Documentation = "https://github.com/Hahyun-Lee/brain-ai-memory#readme"
Issues = "https://github.com/Hahyun-Lee/brain-ai-memory/issues"

[project.scripts]
brain-ai = "brain_ai_memory.cli:main"
brain-ai-mcp = "brain_ai_memory.mcp_server:main"
brain-ai-hook = "brain_ai_memory.hook_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/brain-ai-memory/schema" = ["schema/brain_components.yaml"]
